Fix bug where added passengers did not respect the vehicle's visibility rules.